--- a/Storyboard.storyboard
+++ b/Storyboard.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="cpR-xr-2X1">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Ea0-Yf-9ou">
     <dependencies>
-        <deployment defaultVersion="1280" identifier="iOS"/>
+        <deployment defaultVersion="1536" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
@@ -45,7 +45,7 @@
                                 </connections>
                             </textView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="I8P-Ju-FiC">
-                                <rect key="frame" x="20" y="20" width="280" height="30"/>
+                                <rect key="frame" x="20" y="20" width="144" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="Oyv-x3-HQT"/>
@@ -56,22 +56,39 @@
                                     <outlet property="delegate" destination="cpR-xr-2X1" id="sJR-YA-CMP"/>
                                 </connections>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zlz-O8-5pH">
+                                <rect key="frame" x="172" y="20" width="128" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="128" id="hgk-Jj-bJP"/>
+                                </constraints>
+                                <state key="normal" title="Choose a Network">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="Wwy-Xx-TUa" kind="push" identifier="SelectNetwork" id="LXS-ig-2UA"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="uSL-HP-avx" firstAttribute="top" secondItem="I8P-Ju-FiC" secondAttribute="bottom" constant="8" id="0mO-eY-xAx"/>
+                            <constraint firstItem="I8P-Ju-FiC" firstAttribute="top" secondItem="3Kz-b0-pFG" secondAttribute="bottom" id="4m7-kY-pZS"/>
                             <constraint firstItem="I8P-Ju-FiC" firstAttribute="top" secondItem="3Kz-b0-pFG" secondAttribute="bottom" id="DmY-T7-age"/>
                             <constraint firstItem="rMp-jo-iW1" firstAttribute="leading" secondItem="7d8-tc-TpJ" secondAttribute="leading" constant="20" id="F8n-ps-UfC"/>
                             <constraint firstItem="Rg4-kV-eyo" firstAttribute="top" secondItem="rMp-jo-iW1" secondAttribute="bottom" constant="20" id="L0O-45-jh3"/>
                             <constraint firstItem="rMp-jo-iW1" firstAttribute="top" secondItem="uSL-HP-avx" secondAttribute="bottom" constant="10" id="O6e-kK-Vtc"/>
                             <constraint firstAttribute="trailing" secondItem="rMp-jo-iW1" secondAttribute="trailing" constant="20" id="ZCK-jG-0je"/>
+                            <constraint firstAttribute="trailing" secondItem="zlz-O8-5pH" secondAttribute="trailing" constant="20" id="ZOh-Tk-hmD"/>
                             <constraint firstItem="I8P-Ju-FiC" firstAttribute="leading" secondItem="7d8-tc-TpJ" secondAttribute="leading" constant="20" id="idQ-fB-efu"/>
+                            <constraint firstItem="zlz-O8-5pH" firstAttribute="leading" secondItem="I8P-Ju-FiC" secondAttribute="trailing" constant="8" id="jMb-ag-AhS"/>
                             <constraint firstAttribute="trailing" secondItem="uSL-HP-avx" secondAttribute="trailing" constant="20" id="kC5-RL-9fC"/>
                             <constraint firstItem="uSL-HP-avx" firstAttribute="leading" secondItem="7d8-tc-TpJ" secondAttribute="leading" constant="20" id="kCG-UC-zdi"/>
-                            <constraint firstAttribute="trailing" secondItem="I8P-Ju-FiC" secondAttribute="trailing" constant="20" id="pug-Me-YJn"/>
+                            <constraint firstItem="zlz-O8-5pH" firstAttribute="centerY" secondItem="I8P-Ju-FiC" secondAttribute="centerY" id="lAu-GO-FJA"/>
                         </constraints>
                         <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     </view>
+                    <navigationItem key="navigationItem" id="9hG-lP-6P4"/>
                     <connections>
                         <outlet property="button" destination="rMp-jo-iW1" id="apa-Rf-6x9"/>
                         <outlet property="ssidText" destination="I8P-Ju-FiC" id="g7N-vs-fdO"/>
@@ -79,6 +96,54 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ksm-Sd-67h" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="379" y="-28"/>
+        </scene>
+        <!--Network Chooser Table View Controller-->
+        <scene sceneID="v95-rt-xah">
+            <objects>
+                <tableViewController id="Wwy-Xx-TUa" customClass="NetworkChooserTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="zdu-cb-vUF">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="fDG-1G-hNm">
+                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fDG-1G-hNm" id="cIO-CA-Eby">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Wwy-Xx-TUa" id="cUA-AV-B3t"/>
+                            <outlet property="delegate" destination="Wwy-Xx-TUa" id="t4X-Hf-ciu"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="1ec-qP-mG2"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="78P-yJ-GcG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="834" y="-28"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="07y-GA-YmU">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="Ea0-Yf-9ou" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="CGx-2D-PUj">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="cpR-xr-2X1" kind="relationship" relationship="rootViewController" id="gIA-M4-uYG"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PeC-mC-Qtq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-12" y="-41"/>
         </scene>
